--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Open+Sans:wght@300&family=PT+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,900;1,500;1,700&family=Ubuntu&display=swap" rel="stylesheet">
-    <title>Title</title>
+    <title>Bizzy Blast!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
